Fix permission for SES

--- a/serverless.yml
+++ b/serverless.yml
@@ -7,7 +7,12 @@ provider:
   runtime: nodejs12.x
   lambdaHashingVersion: 20201221
   profile: ServerlessBot
-  region: eu-central-1
+  region: eu-central-
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - ses:*
+      Resource: '*'
 
 
 functions:
