--- a/serverless.yml
+++ b/serverless.yml
@@ -7,7 +7,7 @@ provider:
   runtime: nodejs12.x
   lambdaHashingVersion: 20201221
   profile: ServerlessBot
-  region: eu-central-
+  region: eu-central-1
   iamRoleStatements:
     - Effect: Allow
       Action:
